--- a/SportsStore/SportsStore.WebUI/Web.config
+++ b/SportsStore/SportsStore.WebUI/Web.config
@@ -18,12 +18,21 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<add key ="Email.WriteAsFile" value="true"/>
+	<add key="Email.WriteAsFile" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+
+	  <authentication mode="Forms">
+		  <forms loginUrl="~/Account/Login" timeout="2880">
+			  <credentials passwordFormat="Clear">
+				  <user name="admin" password="secret"/>
+			  </credentials>
+		  </forms>
+	  </authentication>
   </system.web>
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
